新增 FireRedASR 结论

--- a/Models/ASR/2025.01.24_FireRedASR.md
+++ b/Models/ASR/2025.01.24_FireRedASR.md
@@ -231,3 +231,10 @@ Drawing inspiration from recent advances like Whisper while addressing these lim
 Furthermore, we incorporated a simple yet effective adapter design inspired by recent works \cite{chu2023qwen,chu2024qwen2,seedasr2024,wu2023decoder,rubenstein2023audiopalm,li2023prompting,wang2023slm,pan2023cosmic,yu2024connecting,chen2024salm,lakomkin2024end,geng2024unveiling,ma2024embarrassingly}, facilitating efficient model adaptation and research iteration.
 
 ## 6·Conclusions: 结论
+
+We have presented FireRedASR-LLM and FireRedASR-AED, two high-performance ASR models optimized for Mandarin.
+Through comprehensive evaluations, we demonstrate that their architectures, training strategies, and high-quality datasets can achieve state-of-the-art performance while maintaining computational efficiency.
+FireRedASR-AED proves that attention-based encoder-decoder architectures remain highly competitive, while FireRedASR-LLM, leveraging the Encoder-Adapter-LLM framework, showcases the potential of integrating LLM capabilities into ASR systems.
+Our extensive evaluation results confirm the strong performance of both models across multiple dimensions: achieving state-of-the-art results on public Mandarin benchmarks, excelling in diverse real-world scenarios, delivering exceptional accuracy in singing lyrics recognition, and demonstrating robust generalization to Chinese dialects and English speech recognition.
+By releasing model weights and inference code, we aim to contribute to the advancement of speech processing research.
+Future work will focus on further improving performance and expanding support for more languages and varied tasks.
