--- a/Models/ASR/2025.01.24_FireRedASR.md
+++ b/Models/ASR/2025.01.24_FireRedASR.md
@@ -41,19 +41,19 @@ To advance research in speech processing, we release our models and inference co
 ## 1·Introduction: 引言
 
 Automatic Speech Recognition (ASR) has evolved rapidly in recent years, becoming an essential component in intelligent voice interaction and multimedia content understanding.
-Recent advances in ASR have led to several large-scale models, such as Whisper \cite{radford2023robust}, Qwen-Audio \cite{chu2023qwen,chu2024qwen2}, SenseVoice \cite{an2024funaudiollm}, and Seed-ASR \cite{seedasr2024}, showing a paradigm shift from end-to-end models with millions of parameters \cite{li2022recent,prabhavalkar2023end} to larger-scale models \cite{radford2023robust,an2024funaudiollm,zhang2023google,song2024touchasp} and the integration of pre-trained text LLMs \cite{chu2023qwen,chu2024qwen2,seedasr2024,wu2023decoder,rubenstein2023audiopalm,li2023prompting,wang2023slm,pan2023cosmic,yu2024connecting,chen2024salm,lakomkin2024end,geng2024unveiling,ma2024embarrassingly}.
+Recent advances in ASR have led to several large-scale models, such as [Whisper](../SpeechLM/2022.12.06_Whisper.md)[^1], [Qwen-Audio](../SpokenDialogue/2023.11.14_Qwen-Audio.md)[^2],  [Qwen2-Audio](../SpokenDialogue/2024.07.15_Qwen2-Audio.md)[^3], [SenseVoice](2024.07.04_SenseVoice.md)[^4], and [Seed-ASR](2024.07.05_Seed-ASR.md)[^5], showing a paradigm shift from end-to-end models with millions of parameters ([Survey by Li et al. (2022)](../../Surveys/Recent_Advances_in_End-to-End_Automatic_Speech_Recognition.md)[^6]; [Survey by Prabhavalkar et al. (2023)](../../Surveys/End-to-End_Speech_Recognition__A_Survey.md)[^7]) to larger-scale models ([Whisper](../SpeechLM/2022.12.06_Whisper.md)[^1]; [FunAudioLLM](../SpeechLM/2024.07.04_FunAudioLLM.md)[^4]; [Google USM](../SpeechLM/2023.03.02_Google_USM.md)[^8]; [TouchASP](../_Basis/2024.12.20_TouchASP.md)[^9]) and the integration of pre-trained text LLMs ([Qwen-Audio](../SpokenDialogue/2023.11.14_Qwen-Audio.md)[^2]; [Qwen2-Audio](../SpokenDialogue/2024.07.15_Qwen2-Audio.md)[^3]; [Seed-ASR](2024.07.05_Seed-ASR.md)[^5]; [Speech-LLaMA](2023.07.08_Speech-LLaMA.md)[^10]; [AudioPaLM](../SpeechLM/2023.06.22_AudioPaLM.md)[^11]; [Second-Pass Reranking & Deep LLM-Fusion](2023.06.28_Prompting_LLMs_for_Zero-Shot_Domain_Adaptation_in_Speech_Recognition.md)[^12]; [SLM](../SpeechLM/2023.09.30_SLM.md)[^13]; [COSMIC](../SpeechLM/2023.11.03_COSMIC.md)[^14]; [^15], [^16],[^17],[^18],[^19]).
 
 Despite their impressive capabilities and larger model sizes, they face significant limitations in practical applications.
 Some models prioritize multilingual and multitask capabilities, resulting in suboptimal performance for specific languages like Mandarin.
 Others, despite showing promising results, are limited by their closed-source nature, restricting community-driven improvements and academic research.
-The growing demands for modern speech interaction systems, highlighted by GPT-4o \cite{openai2024gpt4o,hurst2024gpt}, underscore the need for open-source, high-performance Mandarin ASR solutions.
+The growing demands for modern speech interaction systems, highlighted by GPT-4o ([^20],[^21]), underscore the need for open-source, high-performance Mandarin ASR solutions.
 
 To address these limitations, in this technical report, we introduce FireRedASR, a family of large-scale models for Mandarin ASR.
 To address varying needs in performance and efficiency across a wide range of application scenarios, FireRedASR consists of two variants: ***FireRedASR-LLM*** and ***FireRedASR-AED***.
-***FireRedASR-LLM*** utilizes an innovative Encoder-Adapter-LLM framework \cite{seedasr2024,wu2023decoder,geng2024unveiling,ma2024embarrassingly}, comprising 8.3B parameters to push the boundary of recognition accuracy.
+***FireRedASR-LLM*** utilizes an innovative Encoder-Adapter-LLM framework ([Seed-ASR](2024.07.05_Seed-ASR.md)[^5]; [Speech-LLaMA](2023.07.08_Speech-LLaMA.md)[^10]; [^18]; [^19]), comprising 8.3B parameters to push the boundary of recognition accuracy.
 This model is particularly well-suited for scenarios where precision is paramount and computational resources are not a primary constraint.
 ***FireRedASR-AED***, on the other hand, is designed to balance superior performance and optimal efficiency.
-It employs an Attention-based Encoder-Decoder (AED) architecture \cite{bahdanau2016end,chan2016listen} with up to 1.1B parameters.
+It employs an Attention-based Encoder-Decoder (AED) architecture ([^22],[^23]) with up to 1.1B parameters.
 Beyond its standalone use, ***FireRedASR-AED*** also functions as a crucial speech representation component within larger LLM-based speech frameworks.
 
 Key contributions of our work include:
@@ -82,7 +82,7 @@ Both models share similar input feature processing and acoustic encoding strateg
 
 ### FireRedASR-AED: Attention-based Encoder-Decoder ASR model
 
-***FireRedASR-AED*** adopts an end-to-end architecture that combines a Conformer-based Encoder (Enc) with a Transformer-based Decoder (Dec)\cite{gulati2020conformer,vaswani2017attention}.
+***FireRedASR-AED*** adopts an end-to-end architecture that combines a Conformer-based Encoder (Enc) with a Transformer-based Decoder (Dec) ([^24], [^25]).
 This design choice leverages both the ability of Conformer to model local and global dependencies in speech features and the effectiveness of Transformer in sequence transduction.
 The overall architecture of ***FireRedASR-AED*** is illustrated in Figure \ref{img:llm_asr} (bottom right).
 
@@ -96,7 +96,7 @@ The dataset also incorporates approximately 11,000 hours of English speech data 
 The subsampling module employs two sequential convolutional layers, each with a stride of 2 and a kernel size of 3, followed by ReLU activation functions.
 This configuration reduces the temporal resolution from 10ms to 40ms per frame, effectively managing computational complexity while preserving essential acoustic information.
 The subsampled features are then processed by a stack of Conformer blocks.
-Each Conformer block consists of four primary components: two Macaron-style feedforward modules positioned at the beginning and end of the block, a multi-head self-attention module incorporating relative positional encoding \cite{dai2019transformer}, and a convolution module equipped with gated linear unit (GLU) and layer normalization.
+Each Conformer block consists of four primary components: two Macaron-style feedforward modules positioned at the beginning and end of the block, a multi-head self-attention module incorporating relative positional encoding ([^26]), and a convolution module equipped with gated linear unit (GLU) and layer normalization.
 The kernel size for all 1-D depthwise convolution is set to 33.
 This structure enables effective modeling of both local and global dependencies in the speech signal, while maintaining computational efficiency.
 
@@ -104,7 +104,7 @@ This structure enables effective modeling of both local and global dependencies 
 It adopts fixed sinusoidal positional encodings and employs weight tying between input and output token embeddings to reduce model complexity.
 Each Transformer block consists of three primary components: a multi-head self-attention module, a multi-head cross-attention module, and a position-wise feedforward module, all utilizing pre-norm residual units to enhance training stability and gradient flow.
 
-**Tokenization**: We employ a mixed tokenization strategy: Chinese characters for Chinese text and token-level byte-pair encoding (BPE) \cite{sennrich2015neural} for English text.
+**Tokenization**: We employ a mixed tokenization strategy: Chinese characters for Chinese text and token-level [byte-pair encoding (BPE)](../_Basis/2015.08.31_BPE.md)[^27] for English text.
 The total vocabulary size is 7,832, comprising 1,000 English BPE tokens, 6,827 Chinese characters, and 5 special tokens.
 
 We investigated various sizes of ***FireRedASR-AED***, with detailed architectural configurations presented in Table \ref{tab:model_config}, where `\#Params` denotes the number of parameters.
@@ -127,14 +127,14 @@ Even after temporal subsampling from 10ms to 40ms, the output of the encoder rem
 Therefore, we incorporate an additional frame splicing operation at the beginning of the adapter.
 This operation further reduces the temporal resolution from 40ms to 80ms per frame, thereby decreasing sequence length and improving the computational efficiency for the LLM.
 
-**LLM Initialization and Processing**: The LLM component of ***FireRedASR-LLM*** is initialized with pre-trained weights from Qwen2-7B-Instruct \cite{qwen2}, a notable open-source LLM.
+**LLM Initialization and Processing**: The LLM component of ***FireRedASR-LLM*** is initialized with pre-trained weights from [Qwen2-7B-Instruct](../TextLM/Qwen2.md)[^28], a notable open-source LLM.
 During training, the input of ***FireRedASR-LLM*** consists of a triplet: (prompt, speech, transcript).
 The encoder and adapter produces a speech embedding ${E}_{S}$, while the prompt and transcript are tokenized and embedded by the LLM into prompt embedding ${E}_{P}$ and transcript embedding ${E}_{T}$.
 These embeddings are concatenated as $({E}_{P}, {E}_{S}, {E}_{T})$ and processed by the subsequent layers of LLM.
 During inference, the input is reduced to $({E}_{P},{E}_{S})$, enabling the LLM to execute next-token-prediction and generate recognized text from speech.
 
 **Training Strategy**: We employ a carefully designed training strategy that balances adaptation and preservation of pre-trained capabilities: the encoder and adapter are fully trainable, while the majority of LLM parameters remain fixed.
-We incorporate trainable LLM Low-Rank Adaptation (LoRA) \cite{hu2021lora} to efficiently fine-tune the LLM.
+We incorporate trainable LLM [Low-Rank Adaptation (LoRA)](../../Modules/LoRA/2021.06.17_LoRA.md)[^29] to efficiently fine-tune the LLM.
 This strategy ensures that the encoder and adapter are adequately trained to map speech features into the semantic space of LLM, while preserving its pre-trained capabilities.
 The training objective is based on cross-entropy loss, with the loss computed only over the transcript portion of the input, ignoring the prompt and speech embeddings.
 
@@ -155,17 +155,17 @@ Third, we evaluate the models' performance on Chinese dialects and English speec
 
 ### Evaluation on Public Mandarin ASR Benchmarks
 
-We benchmark ***FireRedASR-LLM*** and ***FireRedASR-AED*** compared to several recently released large-scale ASR models, including Seed-ASR \cite{seedasr2024}, SenseVoice-L \cite{an2024funaudiollm}, Qwen-Audio \cite{chu2023qwen}, Paraformer-Large \cite{gao2022paraformer}, and Whisper-Large-v3 \cite{radford2023robust}.
-The evaluation is conducted on four widely-used public Chinese Mandarin ASR test sets: 1) AISHELL-1 \cite{bu2017aishell} test set (aishell1); 2) AISHELL-2 \cite{du2018aishell} iOS version test set (aishell2); 3) WenetSpeech \cite{zhang2022wenetspeech} Internet domain test set (ws\_net); 4) WenetSpeech meeting domain test set (ws\_meeting).
-The results for the comparative models are sourced from their respective publications, with Whisper-Large-v3 results taken from the SenseVoice-L \cite{an2024funaudiollm} and WenetSpeech results of Qwen-Audio derived from the Seed-ASR \cite{seedasr2024}.
+We benchmark ***FireRedASR-LLM*** and ***FireRedASR-AED*** compared to several recently released large-scale ASR models, including [Seed-ASR](2024.07.05_Seed-ASR.md)[^5], [SenseVoice-L](2024.07.04_SenseVoice.md)[^4], [Qwen-Audio](../SpokenDialogue/2023.11.14_Qwen-Audio.md)[^2], [Paraformer-Large](2022.06.16_Paraformer.md)[^30], and [Whisper-Large-v3](../SpeechLM/2022.12.06_Whisper.md)[^1].
+The evaluation is conducted on four widely-used public Chinese Mandarin ASR test sets: 1) [AISHELL-1](../../Datasets/2017.09.16_AISHELL-1.md)[^31] test set (aishell1); 2) [AISHELL-2](../../Datasets/2018.08.31_AISHELL-2.md)[^32] iOS version test set (aishell2); 3) [WenetSpeech](../../Datasets/2021.10.07_WenetSpeech.md)[^33] Internet domain test set (ws\_net); 4) WenetSpeech meeting domain test set (ws\_meeting).
+The results for the comparative models are sourced from their respective publications, with Whisper-Large-v3 results taken from the [SenseVoice-L](2024.07.04_SenseVoice.md)[^4] and WenetSpeech results of Qwen-Audio derived from the [Seed-ASR](2024.07.05_Seed-ASR.md)[^5].
 
 As illustrated in Table \ref{tab:test_public}, both ***FireRedASR-LLM*** and ***FireRedASR-AED*** outperform Seed-ASR.
 Notably, ***FireRedASR-LLM*** achieves an 8.4\% relative CER reduction (CERR) compared to Seed-ASR when averaged across all four test sets (Average-4).
-Seed-ASR, a state-of-the-art large ASR models but not open-source, has been trained with 7.7 million hours in its self-supervised learning stage and 0.562 million hours in its supervised fine-tuning stage, with nearly 2B parameters in its encoder and over 10B parameters in its LLM \cite{seedasr2024}.
+Seed-ASR, a state-of-the-art large ASR models but not open-source, has been trained with 7.7 million hours in its self-supervised learning stage and 0.562 million hours in its supervised fine-tuning stage, with nearly 2B parameters in its encoder and over 10B parameters in its LLM ([Seed-ASR](2024.07.05_Seed-ASR.md)[^5]).
 In contrast, ***FireRedASR-AED*** contains only 1.1B parameters and ***FireRedASR-LLM*** includes 8.3B parameters, highlighting the effectiveness of our models' architecture, training strategies and datasets.
 When compared to other models, most of which are open-source, ***FireRedASR-AED*** achieves a 29\%-68\% CERR with fewer parameters than Whisper-Large-v3, SenseVoice-L, and Qwen-Audio.
 
-**Observation of Scaling Law**: Recent studies in LLMs have demonstrated that model performance typically improves with increased model size, known as the scaling law \cite{kaplan2020scaling}.
+**Observation of Scaling Law**: Recent studies in LLMs have demonstrated that model performance typically improves with increased model size, known as the scaling law [^34].
 As shown in \ref{tab:test_size}, we investigate the scaling behavior of our models with different model sizes, as detailed in Table \ref{tab:model_config}.
 For ***FireRedASR-AED***, we scale the model sizes progressively from 140M, 413M, 732M to 1.1B parameters.
 The performance consistently improves with increased model size, achieving CERRs of 6.1\%, 5.3\%, and 5.6\% when scaling from XS to S, S to M, and M to L configurations respectively.
@@ -199,12 +199,12 @@ These results convincingly demonstrate that both ***FireRedASR-AED*** and ***Fir
 To demonstrate the models' effectiveness beyond standard Mandarin, we evaluate their performance on several widely-adopted public benchmarks.
 To the best of our knowledge, we compare our models with the previous SOTA open-source models on these respective test sets.
 
-For Chinese dialect speech recognition, we evaluate our models on the KeSpeech \cite{tang2021kespeech} test set.
-According to the recently released report \cite{li2024baichuan}, existing models including Baichuan-omni, Qwen2-Audio-Instruct, and Whisper-Large-v3 (with parameter sizes of 7B+, 7B+, and 1.5B respectively) achieve average CERs of 6.7\%, 9.9\%, and 44\% on KeSpeech.
+For Chinese dialect speech recognition, we evaluate our models on the KeSpeech[^35] test set.
+According to the recently released report [^36], existing models including Baichuan-omni, Qwen2-Audio-Instruct, and Whisper-Large-v3 (with parameter sizes of 7B+, 7B+, and 1.5B respectively) achieve average CERs of 6.7\%, 9.9\%, and 44\% on KeSpeech.
 As shown in Table \ref{tab:test_other}, both ***FireRedASR-LLM*** and ***FireRedASR-AED*** significantly outperform these models, achieving CERs of 3.56\% and 4.48\% respectively.
 
-For English speech recognition, we evaluate our models on the widely-adopted LibriSpeech \cite{panayotov2015librispeech} test sets (test-clean and test-other).
-Whisper-Large-v3, a popular open-source multilingual ASR model trained on 5 million hours of audio data, achieves WERs of 1.82\% and 3.50\% on test-clean and test-other respectively, as reported in \cite{an2024funaudiollm}.
+For English speech recognition, we evaluate our models on the widely-adopted LibriSpeech[^37] test sets (test-clean and test-other).
+Whisper-Large-v3, a popular open-source multilingual ASR model trained on 5 million hours of audio data, achieves WERs of 1.82\% and 3.50\% on test-clean and test-other respectively, as reported in [FunAudioLLM](../SpeechLM/2024.07.04_FunAudioLLM.md)[^4].
 Our models demonstrate competitive performance: ***FireRedASR-LLM*** achieves WERs of 1.73\% and 3.67\%, while ***FireRedASR-AED*** achieves WERs of 1.93\% and 4.44\% on the respective test sets.
 
 ## Discussion
@@ -219,16 +219,17 @@ Our empirical studies demonstrate that one thousand hours of high-quality, human
 Moreover, the inclusion of singing data in our corpus contributes to our significant performance improvements over baseline models in handling musical content.
 
 **Optimized Training Strategy**: When scaling ***FireRedASR-AED*** from 140M to 1.1B parameters, we identified regularization and learning rate as critical factors affecting model convergence.
-We developed a **Progressive Regularization Training** strategy: initially training without regularization techniques (dropout and SpecAugment \cite{park2019specaugment}) to achieve rapid convergence, then gradually introducing stronger regularization as overfitting tendencies emerge.
+We developed a **Progressive Regularization Training** strategy: initially training without regularization techniques (dropout and SpecAugment[^38]) to achieve rapid convergence, then gradually introducing stronger regularization as overfitting tendencies emerge.
 This method enabled successful training of the ***FireRedASR-AED*** 1.1B, demonstrating superior outcomes.
 The strategy proved beneficial for smaller models with 732M, 413M, and 140M parameters as well.
 Furthermore, larger models benefit from reduced learning rates, making it crucial to adjust this parameter for optimal performance.
 
 **Efficient ASR Framework**: Our architectural choices were informed by extensive experimentation and prior work.
-While our previous Two-pass Transducer-based model \cite{graves2012sequence,sainath2019two} achieved reasonable performance across various ASR models with millions of parameters, it exhibited scaling limitations and high sensitivity to hyperparameters, with the Prediction Network component prone to overfitting.
+While our previous Two-pass Transducer-based model[^39] [^40] achieved reasonable performance across various ASR models with millions of parameters, it exhibited scaling limitations and high sensitivity to hyperparameters, with the Prediction Network component prone to overfitting.
 The Transducer approach also imposed significant memory overhead compared to the cross-entropy loss used in FireRedASR.
-Drawing inspiration from recent advances like Whisper while addressing these limitations, we adopted an attention-based encoder-decoder architecture enhanced with our implementations of Conformer and Transformer.
-Furthermore, we incorporated a simple yet effective adapter design inspired by recent works \cite{chu2023qwen,chu2024qwen2,seedasr2024,wu2023decoder,rubenstein2023audiopalm,li2023prompting,wang2023slm,pan2023cosmic,yu2024connecting,chen2024salm,lakomkin2024end,geng2024unveiling,ma2024embarrassingly}, facilitating efficient model adaptation and research iteration.
+Drawing inspiration from recent advances like Whisper whil
+e addressing these limitations, we adopted an attention-based encoder-decoder architecture enhanced with our implementations of Conformer and Transformer.
+Furthermore, we incorporated a simple yet effective adapter design inspired by recent works ([Qwen-Audio](../SpokenDialogue/2023.11.14_Qwen-Audio.md)[^2]; [Qwen2-Audio](../SpokenDialogue/2024.07.15_Qwen2-Audio.md)[^3]; [Seed-ASR](2024.07.05_Seed-ASR.md)[^5]; [Speech-LLaMA](2023.07.08_Speech-LLaMA.md)[^10]; [AudioPaLM](../SpeechLM/2023.06.22_AudioPaLM.md)[^11]; [Second-Pass Reranking & Deep LLM-Fusion](2023.06.28_Prompting_LLMs_for_Zero-Shot_Domain_Adaptation_in_Speech_Recognition.md)[^12]; [SLM](../SpeechLM/2023.09.30_SLM.md)[^13]; [COSMIC](../SpeechLM/2023.11.03_COSMIC.md)[^14]; [^15]; [^16]; [^17]; [^18]; [^19]), facilitating efficient model adaptation and research iteration.
 
 ## 6·Conclusions: 结论
 
@@ -238,3 +239,46 @@ Through comprehensive evaluations, we demonstrate that their architectures, trai
 Our extensive evaluation results confirm the strong performance of both models across multiple dimensions: achieving state-of-the-art results on public Mandarin benchmarks, excelling in diverse real-world scenarios, delivering exceptional accuracy in singing lyrics recognition, and demonstrating robust generalization to Chinese dialects and English speech recognition.
 By releasing model weights and inference code, we aim to contribute to the advancement of speech processing research.
 Future work will focus on further improving performance and expanding support for more languages and varied tasks.
+
+## Reference
+
+[^1]: [**Whisper**: Robust Speech Recognition via Large-Scale Weak Supervision.](../SpeechLM/2022.12.06_Whisper.md) ICML2023.
+[^2]: [**Qwen-Audio**: Advancing Universal Audio Understanding via Unified Large-Scale Audio-Language Models.](../SpokenDialogue/2023.11.14_Qwen-Audio.md) ArXiv:2311.07919
+[^3]: [**Qwen2-Audio** Technical Report.](../SpokenDialogue/2024.07.15_Qwen2-Audio.md) ArXiv:2407.10759.
+[^4]: [**FunAudioLLM (SenseVoice)**: Voice Understanding and Generation Foundation Models for Natural Interaction between Humans and LLMs.](../SpeechLM/2024.07.04_FunAudioLLM.md) ArXiv:2407.04051.
+[^5]: [**Seed-ASR**: Understanding Diverse Speech and Contexts with LLM-Based Speech Recognition.](2024.07.05_Seed-ASR.md) ArXiv:2407.04675.
+[^6]: [**Survey** Recent Advances in End-to-End Automatic Speech Recognition.](../../Surveys/Recent_Advances_in_End-to-End_Automatic_Speech_Recognition.md) APSIPA TSIP 2022.
+[^7]: [**Survey** End-to-End Speech Recognition: A Survey.](../../Surveys/End-to-End_Speech_Recognition__A_Survey.md) IEEE/ACM@TASLP 2023.
+[^8]: [**Google USM**: Scaling Automatic Speech Recognition Beyond 100 Languages.](../SpeechLM/2023.03.02_Google_USM.md) ArXiv:2303.01037.
+[^9]: [**TouchASP**: Elastic Automatic Speech Perception that Everyone Can Touch.](../_Basis/2024.12.20_TouchASP.md) ArXiv:2412.15622.
+[^10]: [**Speech-LLaMA**: On Decoder-Only Architecture for Speech-to-Text and Large Language Model Integration](../ASR/2023.07.08_Speech-LLaMA.md) ASRU 2023.
+[^11]: [**AudioPaLM**: A Large Language Model that Can Speak and Listen.](../SpeechLM/2023.06.22_AudioPaLM.md) ArXiv:2306.12925.
+[^12]: [**Second-Pass Reranking & Deep LLM-Fusion**: Prompting Large Language Models for Zero-Shot Domain Adaptation in Speech Recognition.](2023.06.28_Prompting_LLMs_for_Zero-Shot_Domain_Adaptation_in_Speech_Recognition.md) ASRU 2023.
+[^13]: [**SLM**: Bridge the Thin Gap between Speech and Text Foundation Models.](../SpeechLM/2023.09.30_SLM.md) ASRU 2023.
+[^14]: [**COSMIC**: Data Efficient Instruction-Tuning for Speech In-Context Learning](../SpeechLM/2023.11.03_COSMIC.md) ArXiv:2311.02248.
+[^15]: yu2024connecting
+[^16]: chen2024salm
+[^17]: lakomkin2024end
+[^18]: geng2024unveiling
+[^19]: ma2024embarrassingly
+[^20]: OpenAI. Hello gpt-4o. https://openai.com/index/hello-gpt-4o/, 2024.
+[^21]: Gpt-4o system card
+[^22]: bahdanau2016end
+[^23]: chan2016listen
+[^24]: gulati2020conformer
+[^25]: Transformer
+[^26]: dai2019transformer
+[^27]: [**BPE**: Neural Machine Translation of Rare Words with Subword Units.](../_Basis/2015.08.31_BPE.md) ArXiv:1508.07909.
+[^28]: [**Qwen2** Technical Report](../TextLM/Qwen2.md) ArXiv:2407.10671.
+[^29]: [**LoRA**: Low-Rank Adaptation of Large Language Models.](../../Modules/LoRA/2021.06.17_LoRA.md) ArXiv:2106.09685.
+[^30]: [**Paraformer**: Fast and Accurate Parallel Transformer for Non-Autoregressive End-to-End Speech Recognition.](2022.06.16_Paraformer.md) ArXiv:2206.08317.
+[^31]: AISHELL-1
+[^32]: AISHELL-2
+[^33]: WenetSpeech
+[^34]: Scaling Laws
+[^35]: KeSpeech
+[^36]: Baichuan-Omni
+[^37]: LibriSpeech
+[^38]: SpecAugment
+[^39]: Sequence Transduction with Recurrent Neural Networks.
+[^40]: Two-Pass End-to-End Speech Recognition.
