--- a/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
+++ b/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
@@ -43,6 +43,43 @@ Our review provides a clear technical roadmap for researchers to understand the 
 
 ## 1·Introduction: 引言
 
+Enabling machines to hear like humans and process audio-centric tasks has long been a significant challenge \cite{deshmukh2023pengi}.
+Audio-Language Models (ALMs), which are trained on audio-text data, focus on the processing, understanding, and reasoning of sounds.
+This area is emerging as a prominent research field at the intersection of audio processing and Natural Language Processing.
+ALMs are not only applicable to basic audio tasks, such as audio classification \cite{elizalde2023clap}, but also show great potential for more complicated scenarios.
+These include tasks such as audio-text retrieval \cite{yan2024MLCLAP}, audio generation \cite{liu2023audioldm}, automatic audio captioning \cite{kim2024enclap}, audio source separation \cite{liu2022_lass}, automatic speech translation \cite{rubenstein2023audiopalm}, and audio chatbots \cite{zhang2023speechgpt}.
+
+In contrast to audio representation learning based on labeled data for specific tasks, ALM can learn from more descriptive textual information, expanding the scope of supervision to include human-annotated captions and readily available titles and descriptions from web sources \cite{laion_ai_audio_dataset}.
+Natural language is well-suited for characterizing real-world audio, which frequently involves multiple overlapping sound events, thereby enabling models to learn their intrinsic relationships \cite{wu2019audio}.
+Furthermore, using natural language as supervision avoids the model's reliance on task-specific predefined labels, enhancing the potential for models to generalize effectively to open-world scenarios.
+
+As large language models (LLMs) exhibit remarkable comprehension capabilities, researchers have explored their integration as guiding components within ALMs.
+However, pre-trained LLMs still face challenges in generalizing across a broad spectrum of downstream tasks \cite{zhao2023LLMsurvey}, necessitating additional transfer steps such as post-training and collaboration with other foundational models.
+Within this research landscape, language provides a unified mechanism for constructing instances, enabling LLMs to undergo instruction tuning and in-context learning across diverse tasks.
+This approach bridges the gap between auditory information and language understanding, facilitating the alignment of multiple components within ALMs.
+Furthermore, language serves as a versatile human-machine interface, empowering users to instruct LLM agents to collaborate effectively with audio-language systems.
+
+Despite the strong interest shown by the audio community in ALMs, there is still a lack of comprehensive surveys to review the current research status.
+Existing relevant reviews include speech-language models \cite{cui2024speechlanguage, ji2024wavchat}, codec-based models \cite{wang2023codec}, ALMs for specific tasks such as audio-text retrieval \cite{koepke2022benchmarks}, automated audio captioning \cite{xu2023aac_survey}, speech-to-text translation \cite{xu2023S2TT}, and audio-language datasets \cite{wijngaard2024ald_survey}.
+Here, we present the first comprehensive survey on ALMs, aiming to achieve an exhaustive coverage of the entire ALM research landscape from the perspective of model training.
+Additionally, we adopt a perspective centered on general audio-centric tasks that encompasses a diverse range of audio types to provide a more detailed reflection of the current state and development of computer audition.
+This survey method reflects mutual promotion and constraints among different research aspects from model to data, aids in systematically summarizes challenges and future directions, and serves as a guide for researchers and practitioners interested in ALM techniques, thereby facilitating further academic research and industrial applications in the field.
+
+We first look at recent advances in ALM research and draw the timeline as shown in Fig.\ref{fig1: timeline}.
+CLAP\cite{elizalde2023clap} is considered a significant milestone.
+Previous work includes some audio-caption datasets \cite{kim2019audiocaps, drossos2020clotho, lipping2022clotho}, which were initially used for automatic audio caption model training and also served as data foundations for ALMs, inspiring subsequent work.
+Since the introduction of pre-training and large-scale datasets \cite{wu2023large}, the advantages of ALMs have gradually gained attention.
+Recently, numerous new works have emerged, primarily reflecting the intertwined development between pre-training and downstream models.
+With increasing model research, recent studies have focused on the lack of unified evaluation standards and proposed various benchmarks.
+It shows a high correlation between datasets, pre-training, downstream models, and benchmark research in ALMs.
+Additionally, we observe that, driven by commercial applications, research interests have shifted more towards the speech domain.
+However, audio typically encompasses a variety of environmental events, including human voices, natural sounds, music rhythms, etc., which presents significant challenges to general audio modeling \cite{chen2023beats}.
+
+In the subsequent sections of this paper, we first introduce the background of audio-language pre-training and transfer paradigm (Section \ref{section: Background}).
+We then describe the foundations of ALMs, including model architecture, training objectives, and evaluation methods (Section \ref{section: Foundations}).
+Following this, we review the topics of representation pre-training (Section \ref{section: Pre-training}), downstream transfer (Section \ref{section: transfer}), and related data (Section \ref{section: Data}).
+Building on these foundations, we discuss the challenges and future research directions (Section \ref{section: Challenges and future directions}), before concluding the paper (Section \ref{section: Conclusion}).
+
 ## 2·Related Works: 相关工作
 
 ## 3·Methodology: 方法
