--- a/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
+++ b/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
@@ -133,7 +133,43 @@ Within the scope of the research landscape, we designed a review outline as show
 We first provide an overview of the foundation on ALMs, thereby comprehensively reviewing related work from three research fields.
 According the progress across areas, we systematically propose the challenges and future directions for ALMs.
 
-## 3·Methodology: 方法
+## 3·Foundations
+
+In this section, we will introduce the general foundations of ALMs, including commonly-used architectures, training objectives, and evaluation methods.
+
+### ALM Architectures
+
+Audio-language models and systems typically comprising audio and language encoders, and may include other multimodal alignment mechanisms and language models.
+As shown in Fig. \ref{fig4:arch}, current ALMs can generally be divided into four types: Two Towers, Two Heads, One Head and Cooperated Systems.
+
+#### Two Towers
+
+The basic form of ALMs, with one encoder and a projector for each modality, embeddings will be aligned in a joint space.
+Among them, the most prominent landmark pretraining research is Contrastive Language-Audio Pretraining (CLAP), which incorporates a contrastive learning framework to bring audio and text descriptions into a joint multimodal space, learning the mapping relationship between the two modalities \cite{elizalde2023clap}.
+Furthermore, based on the concept of modality alignment, mechanisms can be added between two independent encoders to facilitate communication, with the aim of achieving early-stage modality fusion during the representation phase \cite{li2021ctal}.
+
+#### Two Heads
+
+A mainstream form that utilizes one encoder and a projector for each modality, with a language model on top.
+Here, `Head' refers to a network that unifies a certain modal representation space into a unified space \cite{wang2021simvlm, mustafa2022vimoe, jang2023oner}.
+Language modeling has first been proven to possess strong capabilities in semantic feature extraction within the field of speech \cite{wang2023VALLE}, making it a natural design choice to incorporate language models into ALMs.
+With the development of large language models, many works have utilized LLMs as the backbone for ALM inference, expanding the perceptual modalities of large language models and leveraging their emergent understanding capabilities.
+This has led to classic works such as SpeechGPT \cite{zhang2023speechgpt}, Pengi \cite{deshmukh2023pengi}, and Qwen-Audio \cite{chu2023qwenaudio}, making Two Heads a unified architecture of Large Audio-Language Models.
+In this structure, modality fusion can also be promoted through communication mechanisms between encoders \cite{zhao2024mint}.
+It is important to note that in some works, text inputs may only undergo tokenization without the need for a dedicated text encoder, and these models can be considered under a special type of Two Heads framework.
+
+#### One Head
+
+A unified multimodal input form that uses one encoder to handle two different modalities simultaneously, with a language model on top.
+In the vision community, a line of work has conducted research on the One Head architecture based on the view that the same multimodal processing module can achieve better alignment.
+That is, using a unified space to represent two modalities.
+However, there are relatively few related studies in audio-language \cite{sachidananda2022calm}.
+
+#### Cooperated Systems
+
+This system employs an LLM as a planning agent and comprises various model types mentioned above.
+Its design facilitates the selection and utilization of each model's inherent complementary strengths, tailored to downstream task requirements.
+Through the collaboration of these diverse models, the system can tackle a wider array of complex tasks compared to a solitary model alone \cite{li2024survey}.
 
 ## 4·Experiments: 实验
 
