--- a/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
+++ b/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
@@ -171,6 +171,150 @@ This system employs an LLM as a planning agent and comprises various model types
 Its design facilitates the selection and utilization of each model's inherent complementary strengths, tailored to downstream task requirements.
 Through the collaboration of these diverse models, the system can tackle a wider array of complex tasks compared to a solitary model alone \cite{li2024survey}.
 
+### Training Objectives
+
+Training objectives are used to guide model learning during pre-training and transfer.
+As shown in Fig.
+\ref{fig5: objectives}(a), pre-training contrastive, generative, or discriminative objectives guide the model to learn pretext tasks on audio, text, or audio-text paired data, aiming to learn audio semantic features and audio-language correlations.
+As illustrated in Fig.
+\ref{fig5: objectives}(b), task-specific fine-tuning as a commonly adopted transfer method, employs either generative or discriminative objectives depending on the context.
+Another line of transfer methods with generative language models in Fig.
+\ref{fig5: objectives}(c) aims to improve unlock pre-training models' generalization ability on downstream tasks through standard language modeling objectives.
+Note that the above training objectives can be used in combination.
+
+#### Contrastive Objectives
+
+It is the most commonly used type of training objective in audio-language pre-training, which aims to train the model to bring positive sample pairs closer together and push negative sample pairs further apart within a shared embedding space for audio and text, thereby learning the audio-language correlations and obtaining distinguishable representations between audio samples.
+The most widely implemented approach for this category of objective is using a symmetric audio-text infoNCE \cite{oord2018CPC} loss function to measure the similarity between audio and text embeddings.
+Let the $i-th$ sample pair be ${x_{i}, t_{i}}$.
+Given an audio encoder $h_a(\cdot)$ and a text encoder $h_t(\cdot)$, the embedding vectors for the audio sample $x_{i}$ and its corresponding caption $t_{i}$ can be represented as:
+
+$$
+z_{i}^{a}=h_a(x_i)
+$$
+
+$$
+z_{i}^{t}=h_t(t_i)
+$$
+
+The similarity between audio and text embeddings is calculated using the dot product.
+The infoNCE loss for the audio dimension, $l_{a}$, is defined as the average of a normalized function measuring the similarity of different texts to the same audio query.
+Similarly, the contrastive loss for the text dimension, $l_{t}$, measures the similarity of different audios to the same text query.
+For a batch with $B$ audio-text pairs, we have:
+
+$$
+l_{i}^{a}=-\log \frac{\exp \left(z_{i}^{a} \cdot z_{i}^{t} / \tau\right)}{\sum_{j=1}^{B} \exp \left(z_{i}^{a} \cdot z_{j}^{t} / \tau\right)}
+$$
+
+$$
+l_{i}^{t}=-\log \frac{\exp \left(z_{i}^{t} \cdot z_{i}^{a} / \tau\right)}{\sum_{j=1}^{B} \exp \left(z_{i}^{t} \cdot z_{j}^{a} / \tau\right)}
+$$
+
+where $\tau$ represents a temperature parameter used to scale the range of logits.
+When setting the contrastive objective to be completely symmetrical, the total loss for the audio-text pairs in one batch can be defined as:
+
+$$
+\mathcal{L}_{con}=\frac{1}{2B} \sum_{i=1}^{B}(l_{i}^{a} + l_{i}^{t})
+$$
+
+#### Generative Objectives
+
+Generative methods have proven to be powerful and effective in audio representation learning.
+They lead the network in learning semantic features of audio through pretext tasks such as masked reconstruction \cite{huang2022audiomae}.
+In audio-language pre-training, similar approaches are introduced, guiding representation learning through audio or audio-related language generation tasks.
+These methods are often combined with contrastive learning to bolster the robustness of learned audio embeddings or improve computational efficiency.
+During transfer, these generative objectives can help the model adapt to corresponding generative tasks and are widely used in transfer with generative LLMs.
+
+
+During pre-training, the most common method for audio mask reconstruction is based on the audio spectrogram. Let $M\left (\cdot \right )$ denote the masking operation, and let $f_{a}\left (\cdot \right )$ and $p_{ae}\left (\cdot \right )$ represent the spectrogram encoder and audio embedding projection layer, respectively. To achieve masked spectrogram prediction, an additional decoder $f_{a}^{-1} \left (\cdot \right )$ is added to the model. For an audio sample with the original spectrogram $a$, spectrogram reconstruction can be represented as $\hat{a} = f_{a}^{-1} (p_{ae}(f_{a} (M(a))))$. Using $\hat{a}_{n}$ and $a_{n}$ to denote the decoder prediction output of the $n-th$ masked spectrogram patch and the original true patch, respectively. For a spectrogram divided into $N$ patches, the audio reconstruction loss used for self-supervision can be defined as minimizing the $L2$ (mean squared error, MSE) loss:
+
+$$
+\mathcal{L}_{ar}=\frac{1}{N}\sum _{n=1}^{N}\left\|\hat{a}_{i}-a_{i}\right\|_{2}
+$$
+
+Since ALMs include both audio and language modalities as inputs, some works have similarly designed masked cross-modal reconstruction tasks, which typically involve methods such as cross-attention mechanisms to communicate between the encoders of the two modalities and perform reconstruction on the audio representation.
+
+During audio generation transfer, training objectives essentially enhance the model's performance by minimizing the distance between the predicted embedding $\hat{z}$ and its corresponding ground truth $z$. This distance metric can be chosen based on the situation, with common options including $L1$ and $L2$ distances. The training objective can also be set as a weighted sum of multiple distances. For an audio sample, generative audio modeling objective can be represented as:
+
+$$
+\mathcal{L}_{am}=\frac{1}{T} \frac{1}{L} \sum_{t=1}^{T} \sum_{l=1}^{L} \alpha \left\| \hat{z}_{t, l}-{z}_{t, l}\right\|_{1}+\beta \left\| \hat{z}_{t, l}-{z}_{t, l}\right\|_{2}
+$$
+
+where $T$ denotes the total number of frames, $L$ denotes embedding dimension, and $\alpha$ and $\beta$ are weight hyperparameters. In addition to the method that uses embedding differences as a training objective, it is also possible to directly train jointly with the decoder network, designing the training objective directly on the predicted audio amplitude. For instance, aiming to learn a decoder net $h_{de}\left (\cdot \right )$ that maps known audio $x_{i}$ and query $t_{i}$ to a predicted audio $\hat{a}_i$. Denote $z_{i}^{t}$ as the embedding of the language query, the training objective could be to minimize the $L1$ (mean absolute error, MAE) loss between the amplitude spectrogram $|a_i|$ of the ground truth target audio source and the predicted $|\hat{a}_i|$:
+
+$$
+|\hat{a}_i| = h_{de}\left (z_{i}^{t} \right )
+$$
+
+$$
+\mathcal{L}^{'}_{am} = \sum_{i=1}^B \left \| |{a}_i| - |\hat{a}_i| \right \|_{1}
+$$
+
+Generative language modeling objectives are used to guide ALM in generating audio-related text that is consistent with the ground truth. On one hand, they can be used to force the model to learn audio-language correlations to promote representation learning, and help improve the model's performance on corresponding downstream tasks (e.g., automatic caption generation). On the other hand, as a standard loss for generative language modeling, it is also commonly used during ALM transfer with language model \cite{JMLR2023palm}.
+
+An additional text decoder (language pre-trained model) is required in language generation. When using an autoregressive language model to predict tokenized text associated with a given audio sample $x$, the language modeling objective is defined as minimizing the negative log-likelihood of the current ground-truth token (cross-entropy, CE loss), given the previous ground-truth tokens:
+
+$$
+\mathcal{L}_{lm}=-\frac{1}{T} \sum_{t=1}^{T} \log P_{\theta}\left(y_{t} \mid y_{1: t-1}, x\right)
+$$
+
+Here, $y_{t}$ is the $t-th$ ground-truth token of the given caption $y$, $T$ is the total length of the caption, and $\theta$ represents the model's learnable parameters. Non-autoregressive language models also adopt a similar negative log likelihood objective without temporal averaging.
+
+#### Discriminative Objectives
+
+They are used to guide the model in learning to predict the correct label, and can be broadly categorized into classification and retrieval objectives. Here, we take the cross-entropy function as an example to uniformly calculate the loss between the predicted output and the ground truth.
+
+Audio classification is one of the most extensively studied downstream tasks. It aims to recognize patterns from specific audio inputs to predict given labels. For a batch of $B$ audio samples, the objective can be expressed as:
+
+$$
+\mathcal{L}_{cls} = -\frac{1}{B} \sum_{i=1}^{B} \sum_{c=1}^{C} y_{i,c} \log(\hat{p}_{i,c})
+\label{eq:cls}
+$$
+
+where $C$ is the number of classes. $y_{i,c}$ is the true label of the $i-th$ sample in class $c$ (0 or 1). $\hat{p}_{i,c}$ is the predicted probability of the $i-th$ sample in class $c$.
+
+Audio-Text Retrieval (ATR) aims to find matching items between audio clips and textual descriptions. Given a query in one modality (audio or text), the goal is to retrieve the corresponding item from a pool of candidates in the other modality. Here, we use a scoring function $S\left (\cdot \right )$ to represent the model's prediction output by measuring the correlation between audio and text.
+
+Denote $Y$ as a set of $m$ possible caption texts, the correspondence caption of a given audio $x_i$ is
+
+$$
+\hat{y}_i = \arg\max_{y_j \in Y} \frac{\exp(S(z_{i}^{a}, z_{j}^{t}))}{\sum_{k=1}^{m} \exp(S(z_{i}^{a}, z_{k}^{t}))}
+$$
+
+Then, retrieval tasks can be considered as instance-level classification, so the objective can be formatted as:
+
+$$
+\mathcal{L}_{atr} = - \sum_{i=1}^B \log(\hat{y}_i)
+$$
+
+Specially, audio-text matching is pretext task designed to forcing a more fine-grained alignment between audio and text embeddings than contrastive pre-training. It train the model to predict whether a given text correctly describes a provided audio, can be seen as a binary classification task requiring the model to determine whether an audio-language pair is a match or not. The matching objective can be defined as:
+
+$$
+\mathcal{L}_{mat}=p \log \mathcal{S}\left(z^{a}, z^{t}\right)+(1-p) \log \left(1-\mathcal{S}\left(z^{a}, z^{t}\right)\right)
+$$
+
+Here, $p$ is 1 if the audio and text are paired, otherwise it is 0.
+
+### Evaluation Methods
+
+Model evaluation aims to fairly measure the performance of models under the same experimental setup and tasks. The evaluation methods for ALMs mainly include zero-shot (ZS), linear probe, supervised fine-tuning, and instruction-following evaluation. Each of these methods has their own focus, collectively forming the basis for a comprehensive performance evaluation of ALMs.
+
+#### Zero-Shot Evaluation
+
+It focuses on assessing the ability of contrastive ALMs in open-set retrieval. This zero-shot prediction is primarily conducted by measuring the similarity between audio and text embeddings. Notably, aside from direct text-to-audio or audio-to-text retrieval, considering that labels are also a special form of language. This allows for zero-shot evaluation on classification tasks such as sound event detection and emotion recognition.
+
+#### Linear Probe Evaluation
+
+It is a common experimental setup for evaluating pre-trained models, and it is used to assess the audio representation of ALMs. It involves adding a linear header (usually an MLP) to the frozen pre-trained model and training the header on downstream tasks, allowing the model to be adapted for specific tasks and datasets. Although this simple transfer learning setup may not achieve optimal performance on specific tasks, it minimizes the variables introduced, hence its widespread adoption for conducting fair representational evaluations. In linear probe evaluation, the selected tasks are usually fundamental linear tasks like classification.
+
+#### Supervised Fine-tune Evaluation
+
+It further examines the generalization ability of the pre-trained model to downstream tasks and its task-specific performance. For a given downstream task, the audio encoder is unfrozen and fine-tuned along with an attached head. The model's performance is then validated on the test set and compared with state-of-the-art (SOTA) models for that task. This evaluation approach not only covers classification tasks but often combines various types of tasks including detection and generation, thoroughly testing the model's adaptability and flexibility.
+
+#### Instruction-Following Evaluation
+
+It emphasizes the model's ability to understand complex instructions and respond accurately, serving as an important indicator of the task generalization ability of LALMs. This evaluation method can be considered a special type of zero-shot evaluation or supervised fine-tuning evaluation, depending on whether instruction tuning is performed.
+
 ## 4·Experiments: 实验
 
 ## 5·Results: 结果
