新增 Survey 表示学习

--- a/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
+++ b/Surveys/2025.01.25__Survey__Audio-Language_Models_for_Audio-Centric_Tasks.md
@@ -315,7 +315,56 @@ It further examines the generalization ability of the pre-trained model to downs
 
 It emphasizes the model's ability to understand complex instructions and respond accurately, serving as an important indicator of the task generalization ability of LALMs. This evaluation method can be considered a special type of zero-shot evaluation or supervised fine-tuning evaluation, depending on whether instruction tuning is performed.
 
-## 4·Experiments: 实验
+## 4·Representation Pre-training
+
+In recent years, the pursuit of powerful audio representations has led to significant growth in both audio dataset sizes and model scales. Training ALMs becomes more complex, encompassing multiple stages of pre-training aimed at enhancing task-independent audio representations before transfer to downstream tasks.
+
+Audio encoders and text encoders are the most critical components of ALMs. They provide the initialization of model parameters for post pre-training on audio-text pairs or transfer on downstream task datasets. Recent studies have shown that the choice of encoders significantly impacts the generation of powerful representations through Audio-language pre-training and enhances the performance of downstream tasks \cite{mei2024wavcaps}.
+
+### Audio Pre-training
+
+From the perspective of model architecture, pre-trained models used to initialize encoder in ALM mainly include convolutional neural network (CNN)-based, Transformer-based, and codec-based models.
+
+#### CNN-based Models
+
+CNNs are widely used in audio pre-training due to their strong feature extraction capabilities, parameter sharing, and sparse connectivity. In audio applications, CNNs-based models usually use short-time Fourier transform (STFTs) to convert time-domain waveforms into log-mel spectrograms as input. Models like AlexNet and VGG perform well in audio classification tasks\cite{choi2016automatic, hershey2017cnn}, and their performance is related to the design of network depth and width. PANNs \cite{kong2020panns} based on CNN14 achieve good results in Audioset labeling, highlighting the effectiveness of CNNs in learning audio representations.
+
+#### Transformer-based Models
+
+These models utilize self-attention mechanisms to capture long-range dependencies in audio signals and enhance the understanding of complex patterns. Wav2vec 2.0 \cite{baevski2020wav2vec} and HuBERT \cite{hsu2021hubert} are designed for speech tasks, combining CNN with self-attention to manage local features and long-term temporal dynamics. Wav2vec 2.0 uses a unique self-supervised method, which converts raw audio into potential representations through CNN, and then generates contextual output with masks and Transformer. Training involves contrastive tasks to predict masked segments to enhance generalization ability. HuBERT improves this by introducing noise labels from offline clustering to form a codebook for pre-text prediction, encouraging the model to capture acoustic details and long-range temporal relationships. Considering supervised models face overfitting risks during fine-tuning \cite{geirhos2020shortcut}, Whisper \cite{radford2023whisper} addresses this issue with a multi-task training framework, which uses an encoder-decoder Transformer with additional convolutional layers for processing audio spectrograms, promoting next token prediction across tasks and offering wide adaptability. AST \cite{gong2021ast} is the first model without convolutions and based purely on attention for audio spectrograms. While flexible, it requires more data for training and faces challenges with large GPU memory and long training times \cite{dosovitskiyViT2021}. HTSAT \cite{elizalde2024CLAP2} deals with these issues through a hierarchical model structure, processing audio signals through multiple layers, with each layer's Transformer capturing temporal and structural information, enabling more effective handling of long audio signals. AudioMAE \cite{huang2022audiomae} explores the audio extension of the Masked Autoencoder (MAE) \cite{He2022MAE}, adopting a Transformer-based encoder-decoder design, masking log-mel spectrograms at a high rate, with the encoder providing non-masked tokens and the decoder reconstructing masked parts. After fine-tuning, it achieves advanced performance in classification tasks and is one of the mainstream self-supervised pre-training models in the audio domain.
+
+#### Codec-based Models
+
+Based on the encoder-decoder structure, they can convert continuous audio into discrete tokens for developing ALMs. Despite some loss of information, they excel at extracting acoustic features and achieving high-quality audio reconstruction \cite{wu2024towards}. SoundStream \cite{zeghidour2021soundstream} is a pioneer, using streamable SEANets \cite{tagliasacchi2020seanet} for encoding and decoding, and Residual Vector Quantization (RVQ) bottleneck for parallel token flow, optimized through reconstruction and adversarial loss. Encodec \cite{fossez2023high} enhances this framework by adding LSTM layers and using a Transformer-based language model to improve sequence modeling performance.
+
+### Language Pre-training
+
+Language modeling is a fundamental area in artificial intelligence. Based on parameter scale, language pre-training models can be categorized into small ($\leq 1$  billion), medium ($1-10$ billion), large ($10-100$ billion), and very large ($>100$ billion). Models with over $1$ billion parameters are referred to as LLMs.
+By pre-training on vast amounts of text data, these models learn rich semantic representations and grammatical structures. With the development of fine-tuning techniques incorporating human feedback, numerous LLMs with tens of billions of parameters have emerged, demonstrating promising capabilities for multimodal tasks.
+Renowned language pre-training models used as text encoders in ALMs including: GPT (Generative Pre-trained Transformers) families \cite{radford2018GPT1, radford2019GPT2, brown2020GPT3, achiam2023gpt4, ouyang2022InstructGPT, openai2022chatgpt}, LLaMA (Large Language Model Meta AI) families \cite{touvron2023llama, touvron2023llama2, taori2023alpaca, chiang2023vicuna}, Qwen \cite{bai2023qwen, yang2024qwen2, hui2024qwen25, bai2023qwenvl}, and OPT (Open Pre-trained Transformer) families \cite{zhang2022opt, iyer2022optiml}. Note that language pre-training is not the main focus of this paper, for more details please refer to \cite{zhao2023LLMsurvey, minaee2024LLMs}.
+
+### Audio-Language Pre-training
+
+From model training perspective, the objectives in audio-language pre-training can generally be categorized into three types: contrastive, generative objectives, and discriminative objectives. Table \ref{tab1:ALPs} shows the audio-language pre-trained models and objectives they use.
+
+#### Contrastive Pre-trained Models
+
+Contrastive learning is a common pre-training method that learns feature representations by distinguishing similar sample pairs (positive pairs) from dissimilar ones (negative pairs). Inspired by the CLIP \cite{RadfordCLIP2021} model, which leverages large-scale web visual-text pairs to expand the training scale for visual tasks and achieves excellent performance across various tasks, researchers have begun to apply this contrastive training paradigm to the audio field. Microsoft's MS-CLAP \cite{elizalde2023clap} (prefix added by the editor for distinction) is the first contrastive language-audio pre-training model. It uses the symmetric audio-text infoNCE loss function \ref{eq:infonce} for pre-training based on audio-text paired datasets and audios from other tasks such as audio classification.
+
+Subsequent studies have focused on dataset scaling. LAION-CLAP \cite{wu2023large} released a larger audio-caption dataset, LAION-Audio-630K, and trained the first fully open-source CLAP model based on this dataset together with other public datasets. MS-CLAP V2 \cite{elizalde2024CLAP2} not only leverages a more extensive multi-task trained audio encoder but also further expands the audio-text paired dataset for contrastive language-audio learning. BLAT \cite{xu2023blat}, from another prospective, proposes using an audio captioning model to generate audio-text pair data for contrastive pretraining.
+
+Another line of research aims to address the inherent shortcomings of the vanilla CLAP. The experiments of ACBA \cite{wu2023ACBA} show that CLAP has limited understanding of natural language, especially regarding the order or concurrent arrangement of sound events. It suggests modifying the original pre-training dataset to provide more audio-language pairs about ordering. COMPA \cite{ghosh2024compa} addresses the issue that current benchmarks cannot measure the lack of combinatorial reasoning in models and proposes contrastive training with composition-aware hard negatives and a modular contrastive loss to improve combinatorial reasoning capabilities. MGA-CLAP \cite{li2024MGACLAP} tackles the problem of different granularities between modalities by adopting a shared codebook, designing a locality-aware block and a hard-negative guided loss to achieve fine-grained alignment.
+
+Additionally, MusCALL \cite{manco2022contrastive} conducts pre-training research in professional fields such as music and performs excellently in related tasks.
+
+#### Generative Pre-trained Models
+
+Generative pre-training aims to learn deeper semantic representations by setting generative audio or text as pretext tasks. Cross-modal Transformer for Audio-and-Language (CTAL) \cite{li2021ctal} is an early exploration of audio-language pretraining through masked language modeling and cross-attention based masked cross-modal acoustic modeling. Fast Language-Audio Pre-training (FLAP) \cite{yeh2023flap} conduct representation learning through the combination of masked reconstruction and contrastive learning. It generates multiple augmented views of the audio through masking for inter-modal contrast and learns to reconstruct the masked parts of the audio spectrogram. This masking reduces the amount of data that needs to be processed, thereby lowering the computational complexity and making it more efficient than contrastive learning with raw spectrograms. Additionally, by incorporating the masked reconstruction task, the model is encouraged to compress information into each sample embedding, making the audio embedding not only close to their textual counterparts but also producing more informative original inputs. M2D-CLAP \cite{niizumi2024m2dclap} addresses the issue of MAE using all patches to encode training signals, which may lead to underutilization of inductive biases. By combining Masked Modeling Duo (M2D) \cite{niizumi2023m2d} to train the audio encoder while contrastive learning further promotes input modeling, thus enhancing the effectiveness of the learned representations.
+Practice in the vision-language has shown that integrating auxiliary captioning objectives in contrastive learning can provide stronger supervision \cite{yu2022coca, li2022blip}. Cacophony \cite{zhu2024cacophony} improves CLAP by incorporating an auxiliary captioning objective, encouraging the audio encoder to capture fine-grained patterns closely matching text descriptions.
+
+#### Discriminative Pre-trained Models
+
+Discriminative pre-training aims to set up a pretext task of audio-text matching, allowing the model to learn cross-modal alignment features. MINT \cite{zhao2024mint} is a framework that enhances audio-language pre-training through multiple objectives. Specifically, it introduces Bridge-Net as a trainable module, taking the output of the audio encoder and text as inputs to the Bridge-Net. It uses contrastive objective to align the audio and text representations by maximizing the mutual information between them, combines matching objective for fine-grained audio-text alignment, and employs generative objective to guide the audio-grounded text generation task, forcing the model to extract audio features to capture all necessary information about generating the text.
 
 ## 5·Results: 结果
 
